# meta-assistant

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
grpc-streaming/: pyproject.toml
grpc-streaming/grpc_streaming/: __init__.py  __main__.py
grpc-streaming/grpc_streaming/services/: __init__.py  file_reader.py  streaming.py
listener/: pyproject.toml
listener/audio_stream/: README.md  __main__.py
listener/audio_stream/services/: speech_to_text.py
listener/docker/: Dockerfile  build.sh
listener/listener/: README.md  __init__.py  __main__.py
listener/listener/domain/: microphone_stream.py
listener/listener/services/: speech_to_text.py
meta-assistant/meta_assistant/: __main__.py
meta-assistant/meta_assistant/domain/: microphone_stream.py
meta-assistant/meta_assistant/services/: audio2face.py  speech_to_text.py  streaming.py  text_generation.py  text_to_speech.py  voice_activity_detection.py
meta-assistant/meta_assistant/services/grpc/: audio2face_pb2.py  audio2face_pb2_grpc.py  gen_protoc.py
meta-assistant/meta_assistant/services/grpc/proto/: audio2face.proto
meta_assistant/: __init__.py  __main__.py
meta_assistant/domain/: microphone_stream.py
meta_assistant/services/: __init__.py  audio2chunks.py  audio2face.py  speech_to_text.py  text_generation.py  text_to_speech.py
meta_assistant/services/grpc/: audio2face_pb2.py  audio2face_pb2_grpc.py
speech-to-text/docker/: run.sh
speech-to-text/speech_to_text/: README.md  __main__.py
speech-to-text/speech_to_text/domain/: __init__.py
speech-to-text/speech_to_text/services/: __init__.py  transcriptorformatter.py
text-generator/: pyproject.toml
text-generator/docker/: Dockerfile  build.sh  run.sh
text-generator/text_generator/: __main__.py
text-generator/text_generator/services/: generator.py
text-to-speech/: pyproject.toml
text-to-speech/text_to_speech/: __init__.py  __main__.py
text-to-speech/text_to_speech/services/: __init__.py  text_to_speech.py
