[tool.poetry]
name = "grpc-streaming"
version = "0.1.0"
description = ""
authors = ["Nicola Massarenti <nicola.massarenti@gmail.com>"]
readme = "README.md"
packages = [{include = "grpc_streaming"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
loguru = "^0.6.0"
grpcio = "^1.51.1"
grpcio-tools = "^1.51.1"
numpy = "^1.24.1"
soundfile = "^0.11.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
