[tool.poetry]
name = "text-generator"
version = "0.1.0"
description = ""
authors = ["Nicola Massarenti <nicola.massarenti@gmail.com>"]
readme = "README.md"
packages = [{include = "text_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
openai = "^0.26.1"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
