[tool.poetry]
name = "text-to-speech"
version = "0.1.0"
description = ""
authors = ["Nicola Massarenti <nicola.massarenti@gmail.com>"]
readme = "README.md"
packages = [{include = "text_to_speech"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
pydantic = "^1.10.4"
loguru = "^0.6.0"
google-cloud-texttospeech = "^2.14.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
